# audient-evo-py

./: .gitignore  AGENTS.md  CLAUDE.md  IMPROVEMENT_PLAN.md  IMPROVEMENT_PLAN_DONE.md  README.md  evoctl.py  evotui.py  pyproject.toml
dev/: ALSA-DRIVER-PLAN.md  DESIGN.md  EVO8-TESTING.md  diag.py  diag.sh  evo8-implementation.md  evo8-protocol-discrepancies.md  probe.py  probe_mixer.py
dev/wireplumber/: README.md
dev/wireplumber/evo8/: 51-evo8.conf  evo8-setup.service  evo8-setup.sh  evo8-stereo.conf  install.sh  uninstall.sh
evo/: config.py  controller.py
kmod/: .clang-format  .gitignore  99-evo.rules  Makefile  compile_commands.json  dkms.conf  evo-load-config@.service  evo_raw.c  install.sh  uninstall.sh
tests/: conftest.py  test_config.py  test_controller.py  test_devices.py  test_evoctl.py  test_mixer_audio.py  test_mixer_mic.py
wireplumber/: README.md
wireplumber/evo4/: evo4-setup.sh
